{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 1313,
  "lineage": "d7c6afda-3237-2921-4659-445b0e904935",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongoserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d64ee3de0305a13a",
            "arn": "arn:aws:ec2:us-east-2:251075808729:instance/i-0b27185f308b34651",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b27185f308b34651",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mean_project_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04855694973430672",
            "private_dns": "ip-10-20-20-7.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.7",
            "public_dns": "ec2-3-137-188-75.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.188.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07bb18fa2f9b9cfbd",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c78c3744702adc7",
            "tags": {
              "CreatedBy": "quesadaao",
              "Name": "mean_project_mongo_server"
            },
            "tags_all": {
              "CreatedBy": "quesadaao",
              "Name": "mean_project_mongo_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0460001d237ef2f02",
              "sg-09b9f360c9738bd57",
              "sg-09d4b70823e8c5edd"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.mongo",
            "aws_security_group.ssh",
            "aws_security_group.webserver",
            "aws_subnet.subnet_a",
            "aws_vpc.vpc",
            "data.aws_ami.bitnami_mongo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00149760ce42c967b",
            "arn": "arn:aws:ec2:us-east-2:251075808729:instance/i-09c9628cbc51f46f3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09c9628cbc51f46f3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mean_project_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-092e5c85854c0a4ad",
            "private_dns": "ip-10-20-20-6.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.6",
            "public_dns": "ec2-18-188-242-209.us-east-2.compute.amazonaws.com",
            "public_ip": "18.188.242.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-059e540d8e84fdbe6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c78c3744702adc7",
            "tags": {
              "CreatedBy": "quesadaao",
              "Name": "mean_project_web_server"
            },
            "tags_all": {
              "CreatedBy": "quesadaao",
              "Name": "mean_project_web_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0460001d237ef2f02",
              "sg-09b9f360c9738bd57"
            ]
          },
          "dependencies": [
            "aws_instance.mongoserver",
            "aws_key_pair.keypair",
            "aws_security_group.mongo",
            "aws_security_group.ssh",
            "aws_security_group.webserver",
            "aws_subnet.subnet_a",
            "aws_vpc.vpc",
            "data.aws_ami.bitnami_mongo",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00149760ce42c967b",
            "arn": "arn:aws:ec2:us-east-2:251075808729:instance/i-092f8af6ddaa5577b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-092f8af6ddaa5577b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mean_project_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f626cf5950e7263b",
            "private_dns": "ip-10-20-20-20.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.20.20",
            "public_dns": "ec2-3-140-189-105.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.189.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-092d1996715aaa95d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bf3e6b59b150e22",
            "tags": {
              "CreatedBy": "quesadaao",
              "Name": "mean_project_web_server"
            },
            "tags_all": {
              "CreatedBy": "quesadaao",
              "Name": "mean_project_web_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0460001d237ef2f02",
              "sg-09b9f360c9738bd57"
            ]
          },
          "dependencies": [
            "aws_instance.mongoserver",
            "aws_key_pair.keypair",
            "aws_security_group.mongo",
            "aws_security_group.ssh",
            "aws_security_group.webserver",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.vpc",
            "data.aws_ami.bitnami_mongo",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251075808729:internet-gateway/igw-00949eba37bb37382",
            "id": "igw-00949eba37bb37382",
            "owner_id": "251075808729",
            "tags": {
              "Name": "mean_project_gw"
            },
            "tags_all": {
              "Name": "mean_project_gw"
            },
            "vpc_id": "vpc-0770de6bc96283dc2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:251075808729:loadbalancer/app/front/e5e80eee99e1aa26",
            "arn_suffix": "app/front/e5e80eee99e1aa26",
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-1267897101.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:251075808729:loadbalancer/app/front/e5e80eee99e1aa26",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0460001d237ef2f02",
              "sg-09b9f360c9738bd57"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07c78c3744702adc7"
              },
              {
                "subnet_id": "subnet-08bf3e6b59b150e22"
              }
            ],
            "subnets": [
              "subnet-07c78c3744702adc7",
              "subnet-08bf3e6b59b150e22"
            ],
            "tags": {
              "Environment": "mean_project_front"
            },
            "tags_all": {
              "Environment": "mean_project_front"
            },
            "vpc_id": "vpc-0770de6bc96283dc2",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.ssh",
            "aws_security_group.webserver",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:251075808729:listener/app/front/e5e80eee99e1aa26/6b97a5d491fae730",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:251075808729:targetgroup/application-front/82951edd2a213e47",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:251075808729:listener/app/front/e5e80eee99e1aa26/6b97a5d491fae730",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:251075808729:loadbalancer/app/front/e5e80eee99e1aa26",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "mean_project"
            },
            "tags_all": {
              "Name": "mean_project"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front",
            "aws_lb_target_group.front",
            "aws_security_group.ssh",
            "aws_security_group.webserver",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:251075808729:targetgroup/application-front/82951edd2a213e47",
            "arn_suffix": "targetgroup/application-front/82951edd2a213e47",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:251075808729:targetgroup/application-front/82951edd2a213e47",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "application-front",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "mean_project"
            },
            "tags_all": {
              "Name": "mean_project"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0770de6bc96283dc2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:251075808729:targetgroup/application-front/82951edd2a213e47-20230129191726946100000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:251075808729:targetgroup/application-front/82951edd2a213e47",
            "target_id": "i-09c9628cbc51f46f3"
          },
          "dependencies": [
            "aws_instance.mongoserver",
            "aws_instance.webserver1",
            "aws_key_pair.keypair",
            "aws_lb_target_group.front",
            "aws_security_group.mongo",
            "aws_security_group.ssh",
            "aws_security_group.webserver",
            "aws_subnet.subnet_a",
            "aws_vpc.vpc",
            "data.aws_ami.bitnami_mongo",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:251075808729:targetgroup/application-front/82951edd2a213e47-20230129191727862800000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:251075808729:targetgroup/application-front/82951edd2a213e47",
            "target_id": "i-092f8af6ddaa5577b"
          },
          "dependencies": [
            "aws_instance.mongoserver",
            "aws_instance.webserver2",
            "aws_key_pair.keypair",
            "aws_lb_target_group.front",
            "aws_security_group.mongo",
            "aws_security_group.ssh",
            "aws_security_group.webserver",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.vpc",
            "data.aws_ami.bitnami_mongo",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00949eba37bb37382",
            "id": "r-rtb-03533052e4a16b3621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03533052e4a16b362",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251075808729:route-table/rtb-03533052e4a16b362",
            "id": "rtb-03533052e4a16b362",
            "owner_id": "251075808729",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00949eba37bb37382",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00949eba37bb37382",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mean_project_route_table"
            },
            "tags_all": {
              "Name": "mean_project_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0770de6bc96283dc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mean_rule_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abf946819ff054a2",
            "route_table_id": "rtb-03533052e4a16b362",
            "subnet_id": "subnet-07c78c3744702adc7"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route",
            "aws_subnet.subnet_a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mean_rule_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009efd34d886d3828",
            "route_table_id": "rtb-03533052e4a16b362",
            "subnet_id": "subnet-08bf3e6b59b150e22"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route",
            "aws_subnet.subnet_b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251075808729:security-group/sg-09d4b70823e8c5edd",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d4b70823e8c5edd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mongodb protocol",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "mean_project_mongo",
            "name_prefix": "",
            "owner_id": "251075808729",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mean_projectallow_mong_port"
            },
            "tags_all": {
              "Name": "mean_projectallow_mong_port"
            },
            "timeouts": null,
            "vpc_id": "vpc-0770de6bc96283dc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251075808729:security-group/sg-0460001d237ef2f02",
            "description": "Allow ingress traffic for ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0460001d237ef2f02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mean_project_ssh",
            "name_prefix": "",
            "owner_id": "251075808729",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mean_project allow ssh traffic"
            },
            "tags_all": {
              "Name": "mean_project allow ssh traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0770de6bc96283dc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251075808729:security-group/sg-09b9f360c9738bd57",
            "description": "Allow ingress traffic for 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b9f360c9738bd57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mean_project_webserver",
            "name_prefix": "",
            "owner_id": "251075808729",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mean_project allow web traffic"
            },
            "tags_all": {
              "Name": "mean_project allow web traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0770de6bc96283dc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251075808729:subnet/subnet-07c78c3744702adc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.20.20.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c78c3744702adc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251075808729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mean_project_subnet1"
            },
            "tags_all": {
              "Name": "mean_project_subnet1"
            },
            "vpc_id": "vpc-0770de6bc96283dc2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251075808729:subnet/subnet-08bf3e6b59b150e22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.20.20.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bf3e6b59b150e22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "251075808729",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mean_project_subnet2"
            },
            "tags_all": {
              "Name": "mean_project_subnet2"
            },
            "vpc_id": "vpc-0770de6bc96283dc2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:251075808729:vpc/vpc-0770de6bc96283dc2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.20.0/26",
            "default_network_acl_id": "acl-08a517c51308792ba",
            "default_route_table_id": "rtb-045a2eccfcea13dce",
            "default_security_group_id": "sg-0314e8d2bfa0a49ad",
            "dhcp_options_id": "dopt-0001aa565e4c9d077",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0770de6bc96283dc2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-045a2eccfcea13dce",
            "owner_id": "251075808729",
            "tags": {
              "Name": "mean_project_vpc"
            },
            "tags_all": {
              "Name": "mean_project_vpc"
            }
          }
        }
      ]
    }
  ]
}